--- a/Landing Page/index.html
+++ b/Landing Page/index.html
@@ -18,7 +18,7 @@
             </div>
         </div>
         <div class="login">
-            <button type="button">
+<!--             <button type="button"> -->
                 <P>Login</P>
             </button>
         </div>
